# sphinx20analysis

./: .gitignore  README.md  beta_slopes.py  correlations_ananlysis.py  covariance.py  diagnostics.py  dr_analysis.py  example.py  fesscape1.py  main.py  one_snap_fesc.py  one_snap_fesc_mean.py  one_snap_fesc_mean_seleced.py  open_h5.py  params_availability.py  previous_lyc_measurements_analyse.py  pyproject.toml
docs/: conf.py  index.rst
docs/source/usermanual/: installation.rst  quickstart.rst
notebooks/: compare_photometry.ipynb  test_catalogs.ipynb  test_psf.ipynb
outputs/: column_names.txt  column_names_flury_sphinx_fletchr.txt  fesc_correlations.csv  parameter_availability.txt  sim_correlation_matrix.csv  sim_covariance_matrix.csv  sim_indicator_ranking.csv  sim_indicators.csv  sim_mi_matrix.csv  sim_mi_vs_fesc.csv  sim_pearson_matrix.csv  sim_spearman_matrix.csv  sphinx_lyc_summary.txt  summary.txt
sphinx_analysis/: __init__.py
sphinx_analysis/analyser/: LyCDiagnostics.py  SphinxLycAnalyser.py  SphinxLycAnalyser_OLD.py  __init__.py  analyzer.py
sphinx_analysis/catalogues/: CatalogueManager.py  ObservationCatalogue.py  SimulationCatalogue.py  __init__.py  base.py
sphinx_analysis/comparison/: statistics.py
sphinx_analysis/io/: __init__.py  writers.py
sphinx_analysis/plotting/: __init__.py  comparison.py  core.py
sphinx_analysis/utils/: __init__.py  helpers.py
tests/: conftest.py  test_catalog.py  test_maps.py  test_matched_catalog.py  test_mer_catalog.py  test_psf.py
