[project]
name = "sphinx-analysis"
version = "0.1.0"
description = "A simple package to analyse the SPHINX 20 DR tailored for the escape fraction study"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.2.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
